[project]
name = "rlm-demo"
version = "0.1.0"
description = "A simplified, free-to-run Recursive Language Model demo."
dependencies = [
    "litellm>=1.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0"
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["simple_rlm"]
